# Conway-s-Game-of-Life-c-

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  Grid.h  Renderer.h
src/: Game.cpp  Grid.cpp  Renderer.cpp  main.cpp
